# bsh

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  install.sh
scripts/: bsh_init.zsh
src/: daemon.cpp  db.cpp  db.hpp  main.cpp  tui.cpp  tui.hpp
